syntax = "proto3";

package nighthawk.adaptive_rps;

import "google/protobuf/any.proto";

// Selects and configures a MetricsPlugin.
message MetricsPluginConfig {
  // Name used to locate the plugin in the Envoy registry.
  string name = 1;
  // Plugin-specific config such as an external API endpoint and credentials.
  google.protobuf.Any typed_config = 2;
}
